--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,25 @@
 {
     "name": "server",
     "module": "server.ts",
-    "type": "module",
-    "private": true,
     "devDependencies": {
-        "@types/bun": "latest"
+        "@types/bcryptjs": "^3.0.0",
+        "@types/bun": "latest",
+        "@types/cors": "^2.8.17",
+        "@types/dotenv": "^8.2.3",
+        "@types/express": "^5.0.1",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/mongoose": "^5.11.97",
+        "@types/nodemon": "^1.19.6",
+        "@types/prettier": "^3.0.0",
+        "ts-node": "^10.9.2"
     },
     "peerDependencies": {
         "typescript": "^5"
+    },
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "nodemon server.ts"
     },
     "dependencies": {
         "bcryptjs": "^3.0.2",
@@ -15,6 +27,7 @@
         "dotenv": "^16.4.7",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.13.1",
         "nodemon": "^3.1.9",
         "prettier": "^3.5.3"
     }
